--- a/parameters.dist
+++ b/parameters.dist
@@ -1,2 +1,17 @@
-EMAIL_SERVER_ADMIN
-PATH_LOG_FOLDER
+# MYSQL
+MYSQL_LOGIN="login_root"
+MYSQL_PASSWORD="password_root"
+
+# Server
+SERVER_NAME="apache2"
+EMAIL_SERVER_ADMIN="network@local.com"
+PATH_WWW_FOLDER="/var/www"
+PATH_LOG_FOLDER="/var/log/apache2"
+
+# Information for technologie
+PREFIX_DB="local"
+SUFFIX_URL="local.com"
+    # TYPO3
+TYPO3_PATH_DUMMY="/var/www/typo3/dummy/"
+TYPO3_DB_NAME="local_typo3_dummy"
+TYPO3_DOMAIN="dummy.local.com"
