--- a/parameters.dist
+++ b/parameters.dist
@@ -5,8 +5,8 @@ MYSQL_PASSWORD="password_root"
 # Server
 SERVER_NAME="apache2"
 EMAIL_SERVER_ADMIN="network@local.com"
-PATH_WWW_FOLDER="/var/www"
-PATH_LOG_FOLDER="/var/log/apache2"
+PATH_WWW_FOLDER="/var/www/"
+PATH_LOG_FOLDER="/var/log/apache2/"
 
 # Information for technologie
 PREFIX_DB="local"
