--- a/parameters.dist
+++ b/parameters.dist
@@ -3,7 +3,9 @@ MYSQL_LOGIN="login_root"
 MYSQL_PASSWORD="password_root"
 
 # Server
-SERVER_NAME="apache2"
+SERVER_PATH_SITES_AVAILABLE="/etc/apache2/sites-available/"
+SERVER_PATH_SITES_ENABLED="/etc/apache2/sites-enabled/"
+SERVER_COMMAND_RESTART="/etc/init.d/apache2 restart"
 EMAIL_SERVER_ADMIN="network@local.com"
 PATH_WWW_FOLDER="/var/www/"
 PATH_LOG_FOLDER="/var/log/apache2/"
